<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">sqlitetest</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="id">ID</string>
    <string name="desc">Description</string>
    <string name="ingredients">Indgredients</string>
    <string name="create_db">Create Database</string>
    <string name="update_db">Update Database</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>

</resources>